# mcp-generator-2.0

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.githooks/: README.md  pre-commit  pre-commit.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  auto-pr-to-develop.yml  auto-pr-to-main.yml  auto-pr-to-staging.yml  auto-pr.yml  create-release.yml  diff-summary.yml  inspector-tests.yml  test-examples.yml  tests.yml  update-changelog.yml  update-version-metadata.yml
examples/: README.md
examples/minimal/: openapi.json
examples/petstore-openapi-3-1-0/: openapi.json
examples/proxy-smart/: openapi.json
mcp_generator/: __init__.py  __main__.py  cli.py  config.py  generator.py  introspection.py  models.py  register_mcp.py  renderers.py  run_mcp.py  test_generator.py  utils.py  writers.py
mcp_generator/scripts/: __init__.py  generate_jwt_keypair.py  generate_openapi_client.py  test_with_inspector.py
mcp_generator/scripts/workflows/: __init__.py
mcp_generator/templates/: authentication.py  cache_middleware.py  dockerfile_template.py  event_store.py  fastmcp_template.json  oauth_provider.py  pyproject_template.toml  storage_backend.py  test_auth_flows.py  test_runner.py  test_tools.py
mcp_generator/templates/test/: __init__.py  test_auth_flows.py  test_cache.py  test_e2e_http_basic.py  test_e2e_openapi_features.py  test_e2e_performance.py  test_oauth_persistence.py  test_resources.py  test_runner.py  test_tools.py
scripts/: generate_jwt_keypair.py  generate_openapi_client.py  summarize_diff.py  test_examples.py  test_with_inspector.py  update_version_metadata.py  validate_openapi.py
scripts/workflows/: generate_changelog_ai.py  summarize_diff.py  update_version_metadata.py
