[project]
name = "mcp-generator"
version = "2.0.0-alpha"
description = "OpenAPI to FastAPI MCP Server Generator"
authors = [
    {name = "Maximilian Nussbaumer", email = "maxivities@gmail.com"}
]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.34.0",
    "wsproto>=1.2.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "numpy>=2.1.3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "python-dateutil>=2.8.2",
    "urllib3>=2.1.0,<3.0.0",
    "typing-extensions>=4.7.1",
    "fastmcp>=2.13.0",
    "pyjwt>=2.10.0",
    "cryptography>=46.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]
ci = [
    "openai>=1.0.0",  # For AI-powered diff summaries in CI
]

[project.scripts]
generate-mcp = "mcp_generator.cli:main"
register-mcp = "mcp_generator.register_mcp:main"
run-mcp = "mcp_generator.run_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_generator"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
# Exclude generated code, examples, and templates from test collection
norecursedirs = [
    "scripts",
    "examples",
    "generated_*",
    "templates",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]
markers = [
    "validated_auth: Tests that require JWT token validation (--validate-tokens flag)",
    "require_backend: Tests that require backend API running on port 8445",
]
# By default, skip validated auth tests unless explicitly requested
# They will auto-skip if backend/MCP server with validation isn't available
addopts = "-m 'not validated_auth'"
